<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- splash_screen strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="_sign_up_string">Sign up</string>
	<string name="log_in_string">Log in</string>
	<string name="coinbank_wallet_string">Coinbank Wallet</string>
	<string name="home_string">Home</string>
	<string name="home_screen_string">HOME SCREEN</string>
	<string name="coinbank_wallet_ek1_string">Coinbank Wallet</string>
	<string name="home_screen_ek1_string">HOME SCREEN</string>
	<string name="coinbank_wallet_ek2_string">Coinbank Wallet</string>
	<string name="home_ek1_string">Home</string>
	<string name="add_income_string">Add Income</string>
	<string name="add_expense_string">Add Expense</string>
	<string name="help_string">Help</string>
	<string name="help_screen_string">HELP SCREEN</string>
	<string name="coinbank_wallet_ek3_string">Coinbank Wallet</string>
	<string name="help_ek1_string">Help</string>
	<string name="loading_screen_string">LOADING SCREEN</string>
	<string name="coinbank_wallet_ek4_string">Coinbank Wallet</string>
	<string name="settings_string">Settings</string>
	<string name="settings_ek1_string">Settings</string>
	<string name="profile_string">Profile</string>
	<string name="notifications_string">Notifications</string>
	<string name="appearance_string">Appearance </string>
	<string name="languages_string">Languages</string>
	<string name="about_string">About</string>
	<string name="coinbank_wallet_ek5_string">Coinbank Wallet</string>
	<string name="settings_ek2_string">Settings</string>
	<string name="coinbank_wallet_ek6_string">Coinbank Wallet</string>
	<string name="version_1_0__beta__string">Version 1.0 (Beta)</string>
	<string name="__2022__starter_pack_three_string"> 2022, Starter Pack Three</string>
	<string name="about_ek1_string">About</string>
	<string name="_settings_ek3_string">Settings</string>
	<string name="coinbank_wallet_ek7_string">Coinbank Wallet</string>
	<string name="settings_ek4_string">Settings</string>
	<string name="user_name_string">User Name</string>
	<string name="profile_ek1_string">Profile</string>
	<string name="_settings_ek5_string">Settings</string>
	<string name="email__string">Email: </string>
	<string name="coinbank_wallet_ek8_string">Coinbank Wallet</string>
	<string name="settings_ek6_string">Settings</string>
	<string name="language_string">Language</string>
	<string name="_settings_ek7_string">Settings</string>
	<string name="coinbank_wallet_ek9_string">Coinbank Wallet</string>
	<string name="settings_ek8_string">Settings</string>
	<string name="notifications_ek1_string">Notifications</string>
	<string name="_settings_ek9_string">Settings</string>
	<string name="coinbank_wallet_ek10_string">Coinbank Wallet</string>
	<string name="settings_ek10_string">Settings</string>
	<string name="appearance_ek1_string">Appearance </string>
	<string name="_settings_ek11_string">Settings</string>
	<string name="coinbank_wallet_ek11_string">Coinbank Wallet</string>
	<string name="oops__something_went_wrong__string">Oops!Something went wrong.</string>
	<string name="back_to_home_string">Back to Home</string>
	<string name="coinbank_wallet_ek12_string">Coinbank Wallet</string>
	<string name="log_in_ek1_string">Log in</string>
	<string name="email_string">Email</string>
	<string name="password_string">Password</string>
	<string name="coinbank_wallet_ek13_string">Coinbank Wallet</string>
	<string name="log_in_ek2_string">Log in</string>
	<string name="log_in_ek3_string">Log in</string>
	<string name="name_string">Name</string>
	<string name="email_ek1_string">Email</string>
	<string name="password_ek1_string">Password</string>
	<string name="confirm_password_string">Confirm Password</string>
	<string name="coinbank_wallet_ek14_string">Coinbank Wallet</string>
	<string name="sign_up_ek1_string">Sign Up</string>
</resources>