<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		splash_screen
	 *	@date 		Wednesday 10th of August 2022 03:40:25 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/signup_page" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >











			<RelativeLayout android:id="@+id/page_signup_page_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__signup_page_ek2"
					android:background="@drawable/_bg__signup_page_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="640dp" />


				<RelativeLayout android:id="@+id/mask_group_ek13"
					android:layout_marginTop="0dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/frame_1_ek13"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

					</RelativeLayout>

					<View   android:id="@+id/rectangle_1_ek13"
						android:background="@drawable/rectangle_1_ek13_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="360dp"
						android:layout_height="640dp" />

					<TextView android:id="@+id/log_in_ek3"
						android:fontFamily="Bw Helder DEMO"
						android:textStyle="bold"
						android:textSize="20sp"
						android:textColor="@color/_bg__splash_screen_ek2_color"
						android:layout_marginLeft="150dp"
						android:layout_marginTop="501dp"
						android:layout_width="85dp"
						android:layout_height="38dp"
						android:text="@string/log_in_ek3_string"
						 />

					<View   android:id="@+id/rectangle_2_ek2"
						android:background="@drawable/rectangle_2_ek2_shape"
						 android:layout_marginStart="31dp"
						android:layout_marginTop="195dp"
						android:layout_width="300dp"
						android:layout_height="51dp" />

					<TextView android:id="@+id/name"
						android:fontFamily="Bw Helder DEMO"
						android:textStyle="bold"
						android:textSize="20sp"
						android:textColor="@color/coinbank_wallet_color"
						android:layout_marginLeft="31dp"
						android:layout_marginTop="163dp"
						android:layout_width="82dp"
						android:layout_height="38dp"
						android:text="@string/name_string"
						 />

					<View   android:id="@+id/rectangle_3_ek2"
						android:background="@drawable/rectangle_3_ek2_shape"
						 android:layout_marginStart="30dp"
						android:layout_marginTop="289dp"
						android:layout_width="300dp"
						android:layout_height="51dp" />

					<TextView android:id="@+id/email_ek1"
						android:fontFamily="Bw Helder DEMO"
						android:textStyle="bold"
						android:textSize="20sp"
						android:textColor="@color/coinbank_wallet_color"
						android:layout_marginLeft="30dp"
						android:layout_marginTop="257dp"
						android:layout_width="80dp"
						android:layout_height="38dp"
						android:text="@string/email_ek1_string"
						 />

					<View   android:id="@+id/rectangle_4_ek1"
						android:background="@drawable/rectangle_4_ek1_shape"
						 android:layout_marginStart="30dp"
						android:layout_marginTop="383dp"
						android:layout_width="300dp"
						android:layout_height="51dp" />

					<TextView android:id="@+id/password_ek1"
						android:fontFamily="Bw Helder DEMO"
						android:textStyle="bold"
						android:textSize="20sp"
						android:textColor="@color/coinbank_wallet_color"
						android:layout_marginLeft="30dp"
						android:layout_marginTop="351dp"
						android:layout_width="122dp"
						android:layout_height="38dp"
						android:text="@string/password_ek1_string"
						 />

					<View   android:id="@+id/rectangle_5_ek2"
						android:background="@drawable/rectangle_5_ek2_shape"
						 android:layout_marginStart="29dp"
						android:layout_marginTop="477dp"
						android:layout_width="300dp"
						android:layout_height="51dp" />

					<TextView android:id="@+id/confirm_password"
						android:fontFamily="Bw Helder DEMO"
						android:textStyle="bold"
						android:textSize="20sp"
						android:textColor="@color/coinbank_wallet_color"
						android:layout_marginLeft="29dp"
						android:layout_marginTop="445dp"
						android:layout_width="206dp"
						android:layout_height="38dp"
						android:text="@string/confirm_password_string"
						 />


					<RelativeLayout android:id="@+id/group_1_ek1"
						android:layout_marginTop="15dp"
						android:layout_marginStart="153dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/rectangle_5_ek3"
							android:background="@drawable/rectangle_5_ek3_shape"
							 android:layout_marginStart="-1dp"
							android:layout_marginTop="7dp"
							android:layout_width="28.32dp"
							android:layout_height="3.52dp" />

						<View   android:id="@+id/rectangle_6_ek2"
							android:background="@drawable/rectangle_6_ek2_shape"
							 android:layout_marginStart="21dp"
							android:layout_marginTop="7dp"
							android:layout_width="28.32dp"
							android:layout_height="3.52dp" />

					</RelativeLayout>

					<View   android:id="@+id/ellipse_2_ek3"
						android:background="@drawable/ellipse_2_ek3_shape"
						 android:layout_marginStart="31dp"
						android:layout_marginTop="44dp"
						android:layout_width="95dp"
						android:layout_height="95dp" />

					<TextView android:id="@+id/coinbank_wallet_ek14"
						android:fontFamily="Bw Helder DEMO"
						android:textStyle="bold"
						android:textSize="24sp"
						android:textColor="@color/coinbank_wallet_color"
						android:layout_marginLeft="136dp"
						android:layout_marginTop="77dp"
						android:layout_width="222dp"
						android:layout_height="46dp"
						android:text="@string/coinbank_wallet_ek14_string"
						 />

					<View   android:id="@+id/_rectangle_5_ek4"
						android:background="@drawable/_rectangle_5_ek4_shape"
						 android:layout_marginStart="29dp"
						android:layout_marginTop="558dp"
						android:layout_width="298dp"
						android:layout_height="49dp" />

					<TextView android:id="@+id/sign_up_ek1"
						android:fontFamily="Bw Helder DEMO"
						android:textStyle="bold"
						android:textSize="20sp"
						android:textColor="@color/_bg__splash_screen_ek2_color"
						android:layout_marginLeft="142dp"
						android:layout_marginTop="571dp"
						android:layout_width="100dp"
						android:layout_height="38dp"
						android:text="@string/sign_up_ek1_string"
						 />

				</RelativeLayout>

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>