<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		splash_screen
	 *	@date 		Wednesday 10th of August 2022 03:40:25 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/login_page" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >











			<RelativeLayout android:id="@+id/page_login_page_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__login_page_ek2"
					android:background="@drawable/_bg__login_page_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="360dp"
					android:layout_height="640dp" />


				<RelativeLayout android:id="@+id/mask_group_ek12"
					android:layout_marginTop="0dp"
					android:layout_marginStart="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/frame_1_ek12"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

					</RelativeLayout>

					<View   android:id="@+id/rectangle_1_ek12"
						android:background="@drawable/rectangle_1_ek12_shape"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="360dp"
						android:layout_height="640dp" />

					<TextView android:id="@+id/log_in_ek1"
						android:fontFamily="Bw Helder DEMO"
						android:textStyle="bold"
						android:textSize="20sp"
						android:textColor="@color/_bg__splash_screen_ek2_color"
						android:layout_marginLeft="150dp"
						android:layout_marginTop="501dp"
						android:layout_width="85dp"
						android:layout_height="38dp"
						android:text="@string/log_in_ek1_string"
						 />

					<View   android:id="@+id/rectangle_2_ek1"
						android:background="@drawable/rectangle_2_ek1_shape"
						 android:layout_marginStart="31dp"
						android:layout_marginTop="307dp"
						android:layout_width="300dp"
						android:layout_height="51dp" />

					<TextView android:id="@+id/email"
						android:fontFamily="Bw Helder DEMO"
						android:textStyle="bold"
						android:textSize="20sp"
						android:textColor="@color/coinbank_wallet_color"
						android:layout_marginLeft="31dp"
						android:layout_marginTop="275dp"
						android:layout_width="80dp"
						android:layout_height="38dp"
						android:text="@string/email_string"
						 />

					<View   android:id="@+id/rectangle_3_ek1"
						android:background="@drawable/rectangle_3_ek1_shape"
						 android:layout_marginStart="31dp"
						android:layout_marginTop="415dp"
						android:layout_width="300dp"
						android:layout_height="51dp" />

					<TextView android:id="@+id/password"
						android:fontFamily="Bw Helder DEMO"
						android:textStyle="bold"
						android:textSize="20sp"
						android:textColor="@color/coinbank_wallet_color"
						android:layout_marginLeft="31dp"
						android:layout_marginTop="383dp"
						android:layout_width="122dp"
						android:layout_height="38dp"
						android:text="@string/password_string"
						 />


					<RelativeLayout android:id="@+id/group_1"
						android:layout_marginTop="15dp"
						android:layout_marginStart="153dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View   android:id="@+id/rectangle_5"
							android:background="@drawable/rectangle_5_shape"
							 android:layout_marginStart="-1dp"
							android:layout_marginTop="7dp"
							android:layout_width="28.32dp"
							android:layout_height="3.52dp" />

						<View   android:id="@+id/rectangle_6_ek1"
							android:background="@drawable/rectangle_6_ek1_shape"
							 android:layout_marginStart="21dp"
							android:layout_marginTop="7dp"
							android:layout_width="28.32dp"
							android:layout_height="3.52dp" />

					</RelativeLayout>

					<View   android:id="@+id/ellipse_2_ek2"
						android:background="@drawable/ellipse_2_ek2_shape"
						 android:layout_marginStart="132dp"
						android:layout_marginTop="70dp"
						android:layout_width="95dp"
						android:layout_height="95dp" />

					<TextView android:id="@+id/coinbank_wallet_ek13"
						android:fontFamily="Bw Helder DEMO"
						android:textStyle="bold"
						android:textSize="24sp"
						android:textColor="@color/coinbank_wallet_color"
						android:layout_marginLeft="83dp"
						android:layout_marginTop="198dp"
						android:layout_width="222dp"
						android:layout_height="46dp"
						android:text="@string/coinbank_wallet_ek13_string"
						 />

					<View   android:id="@+id/_rectangle_5_ek1"
						android:background="@drawable/_rectangle_5_ek1_shape"
						 android:layout_marginStart="31dp"
						android:layout_marginTop="501dp"
						android:layout_width="298dp"
						android:layout_height="49dp" />

					<TextView android:id="@+id/log_in_ek2"
						android:fontFamily="Bw Helder DEMO"
						android:textStyle="bold"
						android:textSize="20sp"
						android:textColor="@color/_bg__splash_screen_ek2_color"
						android:layout_marginLeft="150dp"
						android:layout_marginTop="514dp"
						android:layout_width="84dp"
						android:layout_height="38dp"
						android:text="@string/log_in_ek2_string"
						 />

				</RelativeLayout>

			</RelativeLayout>


		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>